[package]
name = "jenkinsfile"
version = "0.1.0"
authors = ["Phodal Huang <h@phodal.com>", "R. Tyler Croy <rtyler@brokenco.de>"]
edition = "2018"
description = "a tools to convert Jenkinsfile to data struct"
homepage = "https://github.com/inherd/jenkinsfile"
repository = "https://github.com/inherd/jenkinsfile"
license = "LGPL-3.0+"
keywords = ["jenkins", "pipeline"]

[lib]
name = "jenkinsfile"
path = "src/lib.rs"

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
